# p2pc

./: Cargo.toml  Config.toml  LICENSE  Makefile  README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/templates/: index.html
frontend/: Cargo.toml  build.rs  main.js
frontend/src/: lib.rs  model.rs  style.scss
frontend/src/components/: chat.rs  member_list.rs  message_input.rs  message_view.rs  mod.rs  nickname_input.rs
frontend/static/: index.html
src/: config.rs  lib.rs  main.rs
src/protocol/: mod.rs  model.rs  request.rs  response.rs
templates/: index.html
