[package]
name = "p2pc"
version = "0.1.0"
authors = ["Vitalii Stepchyk <vitalatron@gmail.com>"]
repository = "https://github.com/vstepchik/p2pc"
edition = "2018"
description = "A web peer-to-peer chat completely written in rust"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.26"
serde = { version = "1.0.104", features = ["derive"] }
toml = "0.5.6"

[workspace]
members = [
    "backend", 
    "frontend",
]
