[package]
authors = ["Vitalii Stepchyk <vitalatron@gmail.com>"]
description = "A web peer-to-peer chat completely written in rust"
license = "MIT"
name = "webapp-frontend"
readme = "../README.md"
repository = "https://github.com/vstepchik/p2pc"
version = "0.1.0"
edition = "2018"

[lib]
name="p2pc"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
anyhow = "1.0.26"
sass-rs = "0.2.2"
url = "2.1.1"
p2pc = { version = "0.1.0", path = ".." }

[dependencies]
log = "0.4.8"
serde = { version = "1.0.104", features = ["derive"] }
p2pc = { version = "0.1.0", path = ".." }
yew = { version = "0.13.0", features = ["web_sys"] }
yew-router = { version = "0.10.0", features = ["web_sys"] }
wasm-bindgen = "0.2.60"
console_error_panic_hook = "0.1.6"
js-sys = "0.3.37"

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["wasmbind", "js-sys", "clock"]

[dependencies.web-sys]
version = "0.3"
features = [
  "Window"
]
